[workspace]

members = [
    "lib",
    "network",
    "loesung_01",
    "loesung_02",
    "loesung_03",
    "loesung_04",
    "loesung_05",
    "loesung_06",
    "loesung_07",
    "loesung_08",
    "loesung_09",
    "loesung_10",
    "loesung_11",
    "loesung_12",
    "loesung_13",
    "loesung_14",
    "loesung_15",
    "loesung_16",
    "loesung_17",
    "loesung_32",
]
